			<li>Replaced dnn tree view (for category selection) with Telerik Treeview. - <strong>NEW</strong></li>
			<li>Made admin/author only 'control panels' something that is hidden by default (but can easily be displayed via client-side quickly). <strong>NEW</strong></li>
			<li>Corrected index problems on category and tag tables (even though they will eventually be removed), to avoid maintenance problems. <strong>NEW</strong></li>
			<li>20215 - Removed ShareBadge Pro and added option for AddThis (which allows complete customization), in addition to big 4 I already added. (In Progress) <strong>NEW</strong></li>
			<li>Added user image and profile link to blog description, added author profile section to entry view. (In Progress) - <strong>NEW</strong></li>
			<li>Corrected TimeZone problems. (In Progress) - <strong>NEW</strong></li>	
			<li>19021, 20865 - Added support for "Ghost Writers" via a new module permission. (In Progress) - <strong>NEW</strong></li>
			<li>Disabled partial rendering throught all parts of the module. All previous 'benefits' are now handled client-side (show, hide, etc.) with less overhead and trips to the server. - <strong>NEW</strong></li>
			<li>Reduced the number of module definitions and exposed the same functionality through easier to use to make module easier to manage/get started with. - <strong>NEW</strong></li>
			<li>Added paging support to the module (initial 'home' view doesn't display any paging, by design). - <strong>NEW</strong></li>
		</ul>

		Known Issues:
		<ul>
			<li>Comments look a bit odd. Awaiting Journal functionality not available in core 6.2 Beta 2.</li>
			<li>Recent comments missing (this is related to the item above).</li>
			<li>Author images look different from others seen in social.</li>
			<li>Social Sharing module options are not properly wired in.</li>
			<li>Investigating module on Azure.</li>
		</ul>
</div>