@@ -96,6 +96,7 @@
 						  </moduleControl>
 					  </moduleControls>
 					  <permissions>
+						  <permission code="DNN_BLOG_MODULE" key="BLOGGER" name="Blogger" />
 						  <permission code="DNN_BLOG_MODULE" key="GHOSTWRITER" name="Ghost Writer" />
 					  </permissions>
 				  </moduleDefinition>
