@@ -44,6 +44,7 @@
 			<li>Disabled partial rendering throught all parts of the module. All previous 'benefits' are now handled client-side (show, hide, etc.) with less overhead and trips to the server. - <strong>NEW</strong></li>
 			<li>Reduced the number of module definitions and exposed the same functionality through easier to use to make module easier to manage/get started with. - <strong>NEW</strong></li>
 			<li>Added paging support to the module (initial 'home' view doesn't display any paging, by design). - <strong>NEW</strong></li>
+			<li>Corrected problems found in SQL Azure installs. - <strong>NEW</strong></li>
 		</ul>
 
 		Known Issues:
@@ -52,6 +53,6 @@
 			<li>Recent comments missing (this is related to the item above).</li>
 			<li>Author images look different from others seen in social.</li>
 			<li>Social Sharing module options are not properly wired in.</li>
-			<li>Investigating module on Azure.</li>
+			<li>Blogger permissions not all wired in yet.</li>
 		</ul>
 </div>
